# abm-lead-emergence

./: .coverage.SOM-093RTF3-L.11579.XMPiPJhx  .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MODELS.md  PIPELINE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/: pull_request_template.md
.github/workflows/: python-ci.yml  test.yml
archive/: README.md
archive/config/: test_model.json
archive/docs/: PROJECT_OVERVIEW.md
archive/models/: network_model.py  schema_model.py
archive/scripts/: run_analysis.py  run_parameter_exploration.py  run_parameter_sweep.py  run_test.py
config/: analysis_config.json  analysis_config.yaml  base.yaml  base_config.yaml  model_schema.json  parameter_sweep.yaml  parameters.yaml  test_minimal.yaml
config/variants/: scp_dynamic.yaml  si_prototype.yaml  sip_hierarchical.yaml
docs/: BASE_MODEL.html  BASE_MODEL.md  MODELS.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  REVIEWER_FEEDBACK.md  REVISION_PLAN.md  model_comparison.tex  model_parameters.csv  model_parameters.md  parameter_reference.md  parameter_sweep.md  social_interactionist_model.tex
docs/analysis/: analysis_pipeline.aux  analysis_pipeline.out  analysis_pipeline.tex
docs/models/: model_comparison.aux  model_comparison.out  model_comparison.tex  model_comparison.toc  model_pipeline.aux  model_pipeline.out  model_pipeline.tex  model_pipeline.toc  model_template.tex
docs/pseudo_code/: base_task.md  base_task_validation.md  context_predictions.md  context_task_rules.md  leadership_effects.md  model_adjustments.md  perspective_comparison_table.md  perspective_context_fit.md  puzzle_task_validation.md  task_overview.md
docs/quarto/: build_docs.sh  (+2 more)
results/: base_model_results.md
scripts/: README.md  analyze_emergence.py  analyze_results.py  compare_perspectives.py  parameter_sweep.py  run_parameter_sweep.py  run_simulation.py  test_base_model.py  test_single_team.py  validate_puzzle_task.py  visualize_base_model.py  visualize_base_results.py  visualize_cognitive_model.py  visualize_interactionist_model.py
src/: __init__.py  run_feature_analysis.py
tests/: conftest.py  test_base_model.py  test_config.py  test_feature_extraction.py  test_integration.py  test_schema_model.py  test_simulation_runner.py
(+257 files in other folders)
